@@ -1,5 +1,12 @@
 2003-10-28  Alexey Shchepin  <alexey@sevcom.net>
 
+	* src/ejabberd_listener.erl: Added handling of accept errors,
+	added timeout value to ssl:accept
+
+	* src/mod_vcard.erl: Added checks for all empty input fields
+
+	* src/mod_offline.erl: More strong checks for stored packets
+
 	* src/ejabberd_sm.erl: Bugfix
 
 2003-10-27  Alexey Shchepin  <alexey@sevcom.net>
